web/src/styles/app.scss
@import 'variables';


.q-w-sm {
  width: 360px;
}
.q-w-md {
  width: 400px;
}
.q-w-lg {
  width: 600px;
}
.q-w-xl {
  width: 800px;
}
.q-w-p50 {
  min-width: 500px;
  width: 50vw;
}
.q-w-p80 {
  min-width: 800px;
  width: 80vw;
}

.text-decoration-none {
  cursor: pointer;
  text-decoration: none;
}

.text-decoration-none:hover {
  text-decoration: underline;
}

.bg-white {
  background-color: white;
}

.border-bottom {
  border-bottom: 1px solid $border-color;
}

.border-right {
  border-right: 1px solid $border-color;
}

// For Dashboard draggable color change
.displayDiv .vue-grid-item.vue-grid-placeholder {
  background: #b1b5e5 !important;
}

.confirmBody {
  padding: 11px 1.375rem 0;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 700;

  .head {
    line-height: 2.125rem;
    margin-bottom: 0.5rem;
  }

  .para {
    color: $light-text;
  }
}

.confirmActions {
  justify-content: center;
  padding: 1.25rem 1.375rem 1.625rem;
  display: flex;

  .q-btn {
    font-size: 0.75rem;
    font-weight: 700;
  }
}
.q-position-engine {
  z-index: 10001;
}

.tabContent {
  background-color: rgba(136, 136, 136, 0.103);
  // tab content bg color
  padding: 0px 10px;
  border-radius: 0.5rem;
  &__head {
    justify-content: end;
    display: flex;
    .title {
      line-height: 1rem;
      font-weight: bold;
      font-size: 16px;
      padding-top: 10px;
    }
    .copy_action {
      .q-btn {
        justify-content: end;
        font-size: 8px;
        padding: 10px 0px 0px 0px;
        min-width: 0px;
        min-height: 0px;
        line-height: 0px;
        float: inline-end;
        position: absolute;
        right: 30px;
      }
    }
  }
  pre {
    font-size: 13px;
    white-space: pre-wrap;
    word-wrap: break-word;
    margin: 0;
    line-height: 20px;
    padding-top: 5px;
    padding-bottom: 5px;
    max-width: 96%;
  }
}

.monaco-editor {
  outline-width: 0px;
  outline-style: none;
}

.o2-page-title {
  font-size: 24px;
  font-weight: 900;
  line-height: 36px;
}

.o2-page-subtitle {
  font-size: 16px;
  font-weight: 600;
  line-height: 22px;
}

.o2-page-subtitle1 {
  font-size: 13px;
  font-weight: 600;
  line-height: 15.72px;
}

.o2-page-subtitle2 {
  font-size: 13px;
  font-weight: 400;
  line-height: 18px;
}

.o2-page-subtitle3 {
  font-size: 15px;
  line-height: 22px;
}

.o2-card-title {
  font-size: 18px;
  font-weight: 600;
  line-height: 20.96px;
}

.o2-card-subtitle {
  font-size: 14px;
  font-weight: 400;
  line-height: 15.72px;
}

.o2-card-wrapper {
  box-shadow: none;
  border: 1px solid #E4E7EC;
}

.body--dark {
  .o2-card-wrapper {
    box-shadow: none;
    border: 1px solid #454F5B;
    background-color: #212121;
  } 
}
// this is the default table style for all tables in the app
//to apply this style to a table , we need to add a class o2-quasar-table to the table
//add if we want to apply dark theme to the table , we need to add a class dark-o2-quasar-table to the table
//add if we want to apply light theme to the table , we need to add a class light-o2-quasar-table to the table
//if there are actions in the table , we need to add a class actions-column to the last column

.o2-quasar-table{
  th,td {
    padding: 0px 16px !important;
    height: 36px !important;
  };


  th:last-child.actions-column,
  td:last-child.actions-column {
    //the fixed width as we have moved some actions to the menu so lot of space is occupied by actions section so remvoed that
    position: sticky;
    right: 0;
    z-index: 1;
    background: #ffffff;
    box-shadow: -2px 0px 2px 0 rgba(0, 0, 0, 0.1);
  }
}
//here we have dark theme styling for the table
//`. we are changing the background color of the actions column
.o2-quasar-table-dark{
  th:last-child.actions-column,
  td:last-child.actions-column {
    background: var(--q-dark);
    box-shadow: -2px 0px 2px 0 rgba(144, 144, 144, 0.1);
    width: 150px;
  }
}

.o2-quasar-table-light{
  th:last-child.actions-column,
  td:last-child.actions-column {
    background: #ffffff;
    width: 150px;
    box-shadow: -2px 0px 2px 0 rgba(0, 0, 0, 0.1);
  }
}
//this is for in some of pages we are having a header for eg: pipelines ,functions ,enrichments listing pages
//there to maintain consistency of the page name and add buttons to be at the top while scrolling the table 
//we need to have this because here it is a embededded in q-splitter
.o2-table-header-dark{
  background-color: #181A1B;
  position: sticky;
  top: 0;
  z-index: 1000;
}

.o2-table-header-light{
  background-color: #ffffff;
  position: sticky;
  top: 0;
  z-index: 1000;
}

//this is used to target the header and footer of the table to make it sticky all the time
//we have added the class o2-table-footer-title to the footer title
.o2-table-footer-title{
  font-size: 14px;
  font-weight: 700;
  line-height: 16px;
}
.o2-quasar-table-header-sticky{
  thead {
    position: sticky;
    top: 0;
    z-index: 1000;
  }
}

.o2-quasar-table-header-sticky-dark{
  thead {
    background-color: #181A1B;
  }
}

.o2-quasar-table-header-sticky-light{
  thead {
    background-color: #ffffff;
  }
}


//some times if there are less records or if user tries to search anything the last row of the table is not having border at the bottom

.o2-last-row-border-light{
  tr:last-child{
    td{
      border-bottom: 1px solid #E4E7EC !important;
    }
  }
}

.o2-last-row-border-dark{
  tr:last-child{
    td{
      border-bottom: 1px solid #575A5A !important;
    }
  }
}
/* ... */

